--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins&display=swap"
       rel="stylesheet"
     />
+    <link href="/src/index.css" rel="stylesheet" />
     <title>Tauri + React + Typescript</title>
   </head>
   <body class="">
