--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="/src/index.css" rel="stylesheet" />
     <title>Tauri + React + Typescript</title>
   </head>
-  <body class="">
+  <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
